Fix spacing on news page.
See https://3.basecamp.com/3165813/buckets/10644182/todos/1645838600

--- a/style.css
+++ b/style.css
@@ -249,6 +249,15 @@ body .slicknav_menu .slicknav_icon-bar {
 }
 
 /**
+ * News Page
+ */
+
+.divider:nth-child(n+4) {
+	margin-top: -4em;
+}
+
+
+/**
  * Quicklinks
  *
  */
